adl-frontend/src/test/resources/unit/error/semantic/attributes/attr82.adl
//#SemanticError GroupId=MADL ErrorId=INCOMPATIBLE_ARGUMENT_TYPE line=4
// argument: integer assigned to string
primitive attributes.attr82(a) extends attr7(a), attr8(
  a) {}
